--- a/arduino/SConscript
+++ b/arduino/SConscript
@@ -3,5 +3,5 @@ env = Environment(tools=["default", "arduino"],
 env.ConfigureBoard("uno")
 core = env.ArduinoCore()
 
-sketch = env.Sketch("firmware", ["main.cpp", core])
+sketch = env.Sketch("artemis_arduino", ["main.cpp", core])
 env.Upload(sketch)
