Finally sorted out the build process (for now (I hope))

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .sconsign.dblite
 *.pyc
-arduino/build/build arduino/build/firmware.elf arduino/build/firmware.hex arduino/build/main.o
-arduino/build
+*.o
+build/
+*.hex
+*.elf
+*.a
