--- a/arduino/lib/motor_control/test/SConscript
+++ b/arduino/lib/motor_control/test/SConscript
@@ -2,6 +2,7 @@ Import('env')
 env.Append(CPPPATH = ['#lib/motor_control', 
                       '#lib/arduino_mocks'],
            LIBS = ['boost_unit_test_framework',
+                   'arduino_mocks',
                    'motor_control',
                    'arduino_mocks'
                    ],
