avr-g++ builds with C++11. Direcion changing for motor implemented

--- a/arduino/SConstruct
+++ b/arduino/SConstruct
@@ -5,6 +5,7 @@ env = Environment(CC = 'g++',
 
 ardenv = Environment(tools=["default", "arduino"],
                   UPLOAD_PORT="/dev/ttyACM0",
+                  CPPFLAGS='--std=c++11'
                 )
 ardenv.ConfigureBoard('uno')
 
