Started MotorController and TwoWheelMotorController class. Wrote test for Motor::Stop()

--- a/arduino/lib/motor_control/test/SConscript
+++ b/arduino/lib/motor_control/test/SConscript
@@ -12,4 +12,4 @@ env.Append(CPPPATH = ['#lib/motor_control',
 )
 
 
-env.Program(target= 'test_ut', source = ['TestMotor.cpp'])
+env.Program(target= 'test_ut', source = 'MotorControllerTests.cpp')
