--- a/arduino/SConstruct
+++ b/arduino/SConstruct
@@ -5,7 +5,7 @@ env = Environment(CC = 'g++',
 
 ardenv = Environment(tools=["default", "arduino"],
                   UPLOAD_PORT="/dev/ttyACM0",
-                  CPPFLAGS='--std=c++11'
+                  CPPFLAGS='--std=c++11 -g'
                 )
 ardenv.ConfigureBoard('uno')
 
